<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sending_the_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smart.develop.training.getting_started.interacting_with_other_apps.SendingTheUserActivity">


    <Button
        android:id="@+id/dial_a_phone"
        style="@style/WidthMatchStyle"
        android:text="@string/dial_a_phone" />
    <Button
        android:id="@+id/view_a_map"
        style="@style/WidthMatchStyle"
        android:text="@string/view_a_map" />
    <Button
        android:id="@+id/view_a_web"
        style="@style/WidthMatchStyle"
        android:text="@string/view_a_web" />
    <Button
        android:id="@+id/verify_intent"
        style="@style/WidthMatchStyle"
        android:text="@string/verify_intent" />
    <Button
        android:id="@+id/show_chooser"
        style="@style/WidthMatchStyle"
        android:text="@string/show_chooser" />
</LinearLayout>
