<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_allow_other_to_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smart.develop.training.getting_started.interacting_with_other_apps.AllowOtherToStartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_padding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_padding"
            android:layout_height="@dimen/item_padding"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/receive"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/receive"
            android:layout_width="@dimen/zero_padding"
            android:layout_height="@dimen/item_padding"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/nothing"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_padding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_padding"
            android:layout_height="@dimen/item_padding"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/feedback"
            android:textSize="@dimen/font_small" />

        <EditText
            android:id="@+id/feedback"
            android:layout_width="@dimen/zero_padding"
            android:layout_height="@dimen/item_padding"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="@string/please_input_something"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

</LinearLayout>
