<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sharing_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smart.develop.training.content_sharing.sharing_file.SharingFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/des_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/des_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:textSize="@dimen/font_small"
            android:gravity="center_horizontal"
            android:text="@string/des_file_name" />

        <TextView
            android:id="@+id/des_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:textSize="@dimen/font_small"
            android:gravity="center_horizontal"
            android:text="@string/des_file_type" />

        <TextView
            android:id="@+id/des_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:textSize="@dimen/font_small"
            android:gravity="center_horizontal"
            android:text="@string/des_file_size" />

        <TextView
            android:id="@+id/des_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:textSize="@dimen/font_small"
            android:gravity="center_horizontal"
            android:text="@string/des_file_content" />

        <Button
            android:id="@+id/retrieve_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:text="@string/retrieve_file" />
    </LinearLayout>
</ScrollView>
