<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/internal_file_title"
            style="@style/SavingDataTitleStyle"
            android:text="@string/send" />

        <ImageView
            android:id="@+id/simple_data_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_padding"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/get_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_padding"
            android:text="@string/get_image" />

        <Button
            android:id="@+id/send_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/send_image" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SavingDataTitleStyle"
            android:layout_marginTop="@dimen/medium_padding"
            android:text="@string/receive" />

        <ImageView
            android:id="@+id/simple_data_receive_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_padding"
            android:src="@mipmap/ic_launcher" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SavingDataTitleStyle"
            android:layout_marginTop="@dimen/medium_padding"
            android:text="@string/share_action_provider" />

        <Button
            android:id="@+id/share_action_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_padding"
            android:text="@string/share_action_provider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_padding"
            android:textSize="@dimen/font_small"
            android:text="@string/detail_operate_flow"/>
    </LinearLayout>

</ScrollView>
