<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/shared_preference_title"
            style="@style/SavingDataTitleStyle"
            android:text="@string/shared_preference" />

        <LinearLayout
            android:id="@+id/shared_preference_input_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/shared_preference_title">

            <EditText
                android:id="@+id/shared_preference_input"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/please_input_something"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/shared_preference_input_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shared_preference_read_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/shared_preference_input_ll">

            <TextView
                android:id="@+id/shared_preference_read_show"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/nothing" />

            <Button
                android:id="@+id/shared_preference_read_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/internal_file_title"
            style="@style/SavingDataTitleStyle"
            android:layout_below="@+id/shared_preference_read_ll"
            android:text="@string/internal_file" />

        <LinearLayout
            android:id="@+id/internal_file_input_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/internal_file_title">

            <EditText
                android:id="@+id/internal_file_input"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/please_input_something"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/internal_file_input_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/internal_file_read_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/internal_file_input_ll">

            <TextView
                android:id="@+id/internal_file_read_show"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/nothing" />

            <Button
                android:id="@+id/internal_file_read_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/external_file_title"
            style="@style/SavingDataTitleStyle"
            android:layout_below="@+id/internal_file_read_ll"
            android:text="@string/external_file" />

        <LinearLayout
            android:id="@+id/external_file_input_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/external_file_title">

            <EditText
                android:id="@+id/external_file_input"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/please_input_something"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/external_file_input_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/external_file_read_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/external_file_input_ll">

            <TextView
                android:id="@+id/external_file_read_show"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/nothing" />

            <Button
                android:id="@+id/external_file_read_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/db_title"
            style="@style/SavingDataTitleStyle"
            android:layout_below="@+id/external_file_input_ll"
            android:text="@string/database" />

        <LinearLayout
            android:id="@+id/db_input_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/db_title"
            android:orientation="vertical">

            <EditText
                android:id="@+id/db_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_something"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/db_read_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/db_read_ll"
            style="@style/SavingDataContainerStyle"
            android:layout_below="@+id/db_input_ll">

            <Button
                android:id="@+id/db_insert_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/insert" />

            <Button
                android:id="@+id/db_delete_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />

            <Button
                android:id="@+id/db_update_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update" />

            <Button
                android:id="@+id/db_query_confirm"
                android:layout_width="@dimen/zero_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/query" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

